istioo-configs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: default
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - 127.0.0.1
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - 127.0.0.1    
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
spec:
  gateways:
    - default/argocd-gateway
  hosts:
    - 127.0.0.1
  http:
    - route:
      - destination:
          host: argocd-server.argocd.svc.cluster.local
          port:
            number: 80
